--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,14 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 a {
 	color: #DD4F24;
 }
@@ -146,4 +157,25 @@ nav #publicar_nav a {
 	text-align: center;
 	top: 100%;
 	width: 96px;
+}
+
+#contenido .item .votacion a {
+	text-decoration: none;
+}
+
+#contenido .item .votacion .down:after,
+#contenido .item .votacion .up:after {
+	font-family: "icomoon";
+	font-size: 1.5em;
+	vertical-align: bottom;
+}
+
+#contenido .item .votacion .down:after {
+	content: "\e001";
+	color: red;
+}
+
+#contenido .item .votacion .up:after {
+	content:"\e002";
+	color: green;
 }
