--- a/estilos.css
+++ b/estilos.css
@@ -51,7 +51,14 @@ header #avatar figcaption {
 	background: #22BCE0;
 	float: right;
 	height: 50px;
-	padding: 0 2px;
+	line-height: 50px;
+}
+
+header #avatar figcaption:after {
+	content: "\e001";
+	font-family: "icomoon";
+	font-size: 0.7em;
+	opacity: 0.5;
 }
 
 header #avatar img {
@@ -88,17 +95,37 @@ nav ul li a {
 
 nav #flechita_nav a {
 	background: #22BCE0;
-	padding: 0.5em 0.5em;
+	padding: 0.5em 0;
 	text-decoration: none;
 }
 
+nav #flechita_nav a:after {
+	content:"\e000";
+	font-family: "icomoon";
+	opacity: 0.6;
+}
+
 nav #publicar_nav {
+	background: #DD4F24;
 	float: right;
 	margin-right: 0;
+	padding-right: 1em;
+	position: relative;
+}
+
+nav #publicar_nav:after {
+	color:white;
+	content:"\e003";
+	font-family: "icomoon";
+	font-size: 1.8em;
+	opacity: 0.5;
+	position:absolute;
+	right: 0;
+	top: 0;
 }
 
 nav #publicar_nav a {
-	background: #DD4F24;
+	display: inline-block;
 	padding: 0.5em 1em;
 	text-decoration: none;
 }
@@ -118,6 +145,16 @@ nav #publicar_nav a {
 #contenido .item p {
 	color: #7A7A7A;
 	font-size: 0.9em;
+}
+
+#contenido .item .datos_item .guardar_item {
+	text-decoration: none;
+}
+
+#contenido .item .datos_item .guardar_item:after {
+	color: #FD5;
+	content: "\e004";
+	font-family: "icomoon";
 }
 
 #contenido .item .datos_item .tag_item {
