--- a/estilos.css
+++ b/estilos.css
@@ -130,6 +130,10 @@ nav #publicar_nav a {
 	text-decoration: none;
 }
 
+#bienvenida {
+	display: none;
+}
+
 #contenido {
 	margin: 1em;
 }
@@ -147,7 +151,22 @@ nav #publicar_nav a {
 	font-size: 0.9em;
 }
 
+#contenido .item .datos_item {
+	margin-top: 35px;
+	text-align: right;
+}
+
+#contenido .item .datos_item .comentarios_item {
+	background: #878787;
+	border-radius: 4px;
+	color: white;
+	margin: 0 0 0 2em;
+	padding: 4px;
+	text-decoration: none;
+}
+
 #contenido .item .datos_item .guardar_item {
+	margin: 0 1em;
 	text-decoration: none;
 }
 
@@ -161,6 +180,7 @@ nav #publicar_nav a {
 	background: #22BCE0;
 	border-radius: 0.5em;
 	color: white;
+	float: left;
 	padding: 0.2em 0.5em;
 	text-decoration: none;
 }
